--- a/index.html
+++ b/index.html
@@ -31,25 +31,32 @@
     </script>
 </head>
 
-<body class="flex justify-center items-center my-[10%]  bg-[#3b3939]">
-    <div class="flex justify-center items-center gap-[40px] flex-wrap">
+<body class="flex justify-center items-center my-[10%]  bg-[#3b3939] overflow-hidden">
+    <div class="flex justify-center items-center gap-[40px] flex-wrap overflow-hidden">
         <div class=" sm:basis-[70%] md:basis-[50%] lg:basis-[45%]  rounded-md">
-            <img src="Rectangle 253.png" alt="" class="h-full w-full opacity-80 bg-cover object-cover bg-no-repeat mb-[20px]">
-            <button class=" bg-[#3b3939] border-black border-2 w-full p-[10px] rounded-md text-[#000]">Learn more</button>
+            <img src="Rectangle 253.png" alt=""
+                class="h-full w-full opacity-80 bg-cover object-cover bg-no-repeat mb-[20px]">
+            <button class=" bg-[#3b3939] border-black border-2 w-full p-[10px] rounded-md text-[#000]">Learn
+                more</button>
         </div>
-        <div class=" h-full w-full w-full  sm:basis-[80%] md:basis-[50%] lg:basis-[45%] ">
+        <div class=" h-full w-full   sm:basis-[80%] md:basis-[50%] lg:basis-[45%] ">
             <form action="" class="w-full">
                 <label for="">COLLEGE NAME:</label><br>
-                <input class="border-2 p-[5px] my-[5px] rounded-md w-full" type="text" placeholder="Eg:Graphic Era Hill University"><br>
+                <input class="border-2 p-[5px] my-[5px] rounded-md w-full" type="text"
+                    placeholder="Eg:Graphic Era Hill University"><br>
                 <label for="">CLUB NAME:</label><br>
-                <input class="border-2 p-[5px] my-[5px] rounded-md w-full" type="text" placeholder="Eg: Infinity Coders"><br>
+                <input class="border-2 p-[5px] my-[5px] rounded-md w-full" type="text"
+                    placeholder="Eg: Infinity Coders"><br>
                 <label for="">DETAILS ABOUT YOUR CLUB</label><br>
-                <input class="border-2 p-[5px] my-[5px] rounded-md w-full" type="text" placeholder="Eg:We are the family of 5000 coders and dedicated towards innovating and development"><br>
-                <label for="">TOTAL CLUB MEMBERS:</label><br>
+
+                <textarea class="border-2 p-[5px] my-[5px] rounded-md w-full" name="" id="" cols="30" rows="4"
+                    placeholder="Eg:We are the family of 5000 coders and dedicated towards innovating and development"></textarea><br>
+                <label for="">TOTAL CLUB MEMBERS:</label>
                 <input class="border-2 p-[5px] my-[5px] rounded-md w-full" type="text" placeholder="Eg: 5000"><br>
                 <label for="">CLUB MAIL_ID:</label><br>
-                <input class="border-2 p-[5px] my-[5px] rounded-md w-full" type="text" placeholder="Eg: @infinity792@gmail.com"><br>
-                
+                <input class="border-2 p-[5px] my-[5px] rounded-md w-full" type="text"
+                    placeholder="Eg: @infinity792@gmail.com"><br>
+
                 <button class="rounded-sd bg-[royalblue] w-full p-[10px] my-[10px] rounded-md">CONTINUE</button>
             </form>
         </div>
