--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     </script>
 </head>
 
-<body class="flex justify-center items-center my-[10%]  bg-[#3b3939] overflow-hidden">
-    <div class="flex justify-center items-center gap-[40px] flex-wrap overflow-hidden">
+<body class="flex justify-center items-center my-[5%]  bg-[#3b3939]  ">
+    <div class="flex justify-center items-center  sm:gap-[20px] md:gap-[40px]  flex-wrap overflow-scroll ">
         <div class=" sm:basis-[70%] md:basis-[50%] lg:basis-[45%]  rounded-md">
             <img src="Rectangle 253.png" alt=""
                 class="h-full w-full opacity-80 bg-cover object-cover bg-no-repeat mb-[20px]">
@@ -42,14 +42,14 @@
         <div class=" h-full w-full   sm:basis-[80%] md:basis-[50%] lg:basis-[45%] ">
             <form action="" class="w-full">
                 <label for="">COLLEGE NAME:</label><br>
-                <input class="border-2 p-[5px] my-[5px] rounded-md w-full" type="text"
+                <input class="border-2 p-[5px] my-[5px]  rounded-md w-full" type="text"
                     placeholder="Eg:Graphic Era Hill University"><br>
                 <label for="">CLUB NAME:</label><br>
                 <input class="border-2 p-[5px] my-[5px] rounded-md w-full" type="text"
                     placeholder="Eg: Infinity Coders"><br>
                 <label for="">DETAILS ABOUT YOUR CLUB</label><br>
 
-                <textarea class="border-2 p-[5px] my-[5px] rounded-md w-full" name="" id="" cols="30" rows="4"
+                <textarea class="border-2 p-[5px] my-[5px] rounded-md w-full" name="" id="" cols="0" rows="2" 
                     placeholder="Eg:We are the family of 5000 coders and dedicated towards innovating and development"></textarea><br>
                 <label for="">TOTAL CLUB MEMBERS:</label>
                 <input class="border-2 p-[5px] my-[5px] rounded-md w-full" type="text" placeholder="Eg: 5000"><br>
