--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     </script>
 </head>
 
-<body class="flex justify-center items-center my-[5%]  bg-[#3b3939]  ">
-    <div class="flex justify-center items-center  sm:gap-[20px] md:gap-[40px]  flex-wrap overflow-scroll ">
+<body class="flex justify-center items-center my-[5%]  bg-[#3b3939] overflow-auto ">
+    <div class="flex justify-center items-center  sm:gap-[20px] md:gap-[40px]  flex-wrap overflow-auto ">
         <div class=" sm:basis-[70%] md:basis-[50%] lg:basis-[45%]  rounded-md">
             <img src="Rectangle 253.png" alt=""
                 class="h-full w-full opacity-80 bg-cover object-cover bg-no-repeat mb-[20px]">
